# brand-deck

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
brands/: _template.yaml  therabody.yaml
src/brand_deck/: __init__.py  ai.py  builder.py  cli.py  theme.py  validator.py
src/brand_deck/prompts/: system.py
src/brand_deck/renderers/: __init__.py  bullets.py  cover.py  end_card.py  storyboard.py  table.py  text_image.py
src/brand_deck/utils/: file_reader.py  pptx_helpers.py
